# aiccon_database

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
config/: .env.example  settings.yaml  update_database.bat
database/: build_db.py
database/schema/: dimensions.sql  fact_tables.sql  views.sql
database/tests/: integrity_tests.py
docs/: adding_new_domain.md  data_dictionary.md  decisions.md  maintenance.md  source_log.md
ingestion/api_sources/social_economy/: eurostat.py  istat.py
ingestion/loaders/: base_loader.py  sharepoint_loader.py
processing/: pipeline.py  test.py
processing/harmonise/: legal_form_normaliser.py  nuts_mapper.py
processing/integrate/: merge_social_economy.py  merge_sources.py
processing/mappings/: domain_sources.csv  legal_form_map.csv  nace_labels.csv  nuts_istat.csv
