[project]
name = "aiccon-social-economy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.1",
    "jupyter>=1.1.1",
    "office365-rest-python-client>=2.6.2",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "tenacity>=9.1.4",
]
