[project]
name = "aiccon-social-economy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "duckdb>=1.5.1",
    "jupyter>=1.1.1",
    "office365-rest-python-client>=2.6.2",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "tenacity>=9.1.4",
    "pyarrow>=15.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "processing", "database"]
